feat: adiciona imagem de galeria no fundo durante a fase de exposicao

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Video de Fundo para Fase de Pintura -->
     <video id="painting-bg-video" src="images/Zeus_Pintando_Loop.mp4" loop muted playsinline></video>
 
+    <!-- Imagem de Fundo para Fase de Galeria -->
+    <img id="gallery-bg-image" src="images/galeria.png" alt="Fundo da Galeria">
+
     <!-- 4-Zone Layout -->
     <div id="game-layout">
         <!-- TOP — Timeline / Progress -->
