feat: musica de fundo com loop e botao mute no canto superior

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <!-- Imagem de Fundo para Fase de Galeria -->
     <img id="gallery-bg-image" src="images/galeria.png" alt="Fundo da Galeria">
 
+    <!-- Música de Fundo -->
+    <audio id="bg-music" src="inspiração - quadros.mp3" loop preload="auto"></audio>
+
+    <!-- Botão Mute -->
+    <button id="btn-mute" class="mute-btn" title="Mutar / Desmutar música" aria-label="Mutar música">🔊</button>
+
     <!-- 4-Zone Layout -->
     <div id="game-layout">
         <!-- TOP — Timeline / Progress -->
