fix: corrige nome do arquivo de musica para inspiracao_quadros.mp3

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img id="gallery-bg-image" src="images/galeria.png" alt="Fundo da Galeria">
 
     <!-- Música de Fundo -->
-    <audio id="bg-music" src="inspiração - quadros.mp3" loop preload="auto"></audio>
+    <audio id="bg-music" src="inspiracao_quadros.mp3" loop preload="auto"></audio>
 
     <!-- Botão Mute -->
     <button id="btn-mute" class="mute-btn" title="Mutar / Desmutar música" aria-label="Mutar música">🔊</button>
