--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="phase-setup">
 
     <!-- Video de Fundo para Fase de Pintura -->
-    <video id="painting-bg-video" src="images/Zeus_Pintando_Loop.mp4" loop muted playsinline></video>
+    <video id="painting-bg-video" src="images/Zeus_Pintando_Loop.mp4?v=2" loop muted playsinline></video>
 
     <!-- Imagem de Fundo para Fase de Galeria -->
     <img id="gallery-bg-image" src="images/galeria.png" alt="Fundo da Galeria">
